<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/aviabiletsFragment"
        android:icon="@drawable/ic_menu_aviabilets"
        android:title="@string/aviabilets" />

    <item
        android:id="@+id/hotelsFragment"
        android:icon="@drawable/ic_menu_hotels"
        android:title="@string/hotels" />

    <item
        android:id="@+id/shorterFragment"
        android:icon="@drawable/ic_menu_shorter"
        android:title="@string/shorter" />

    <item
        android:id="@+id/subscriptionsFragment"
        android:icon="@drawable/ic_menu_subscription"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/profile" />
</menu>