<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cheapAviabiletsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="28dp"
        android:lines="2"
        android:text="@string/cheap_aviabilets"
        android:textAlignment="center"
        android:textColor="@color/Gray7"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/outerFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="120dp"
        app:cardBackgroundColor="@color/Gray3"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheapAviabiletsTextView">

        <androidx.cardview.widget.CardView
            android:id="@+id/searchViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/Gray4"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/searchView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_vector_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextDeparture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@drawable/ic_edit_text_background"
                    android:backgroundTint="@android:color/white"
                    android:drawablePadding="8dp"
                    android:hint="@string/departure_hint"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/Gray6"
                    app:layout_constraintBottom_toTopOf="@+id/editTextDestination"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="18dp"
                    android:background="@color/Gray6"
                    app:layout_constraintBottom_toTopOf="@+id/editTextDestination"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/searchView"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDeparture" />

                <EditText
                    android:id="@+id/editTextDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@drawable/ic_edit_text_background"
                    android:backgroundTint="@android:color/white"
                    android:drawablePadding="8dp"
                    android:hint="@string/landing_hint"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/Gray6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchView"
                    app:layout_constraintTop_toBottomOf="@id/editTextDeparture"
                    app:layout_constraintWidth_percent="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/musicalFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/musical_flight"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outerFrame">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicalFlight">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>